@@ -1,12 +1,12 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins-flameeyes/nagios-plugins-flameeyes-9999.ebuild,v 1.2 2012/11/26 02:18:57 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins-flameeyes/nagios-plugins-flameeyes-9999.ebuild,v 1.3 2012/11/30 16:36:29 flameeyes Exp $
 
 EAPI=5
 
-inherit git multilib
+inherit git-2 multilib
 
-EGIT_REPO_URI="git://github.com/Flameeyes/${PN}.git"
+EGIT_REPO_URI="https://github.com/Flameeyes/${PN}.git"
 SRC_URI=""
 KEYWORDS=""
 
