@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/nagios-plugins-flameeyes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins-flameeyes/ChangeLog,v 1.2 2012/11/26 02:18:57 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins-flameeyes/ChangeLog,v 1.3 2012/11/30 16:36:29 flameeyes Exp $
+
+  30 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  nagios-plugins-flameeyes-9999.ebuild:
+  Update to use git-2 and use the http for fetching the repository (to work with
+  proxies).
 
   26 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org>
   nagios-plugins-flameeyes-9999.ebuild:
